# tp-3-stevengoose

./: CMakeLists.txt  example.cpp  flake.nix  pyproject.toml
src/: main.cpp  signal.cpp  signal.h
